--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+		<!-- 引入pdf.js的套件 -->
+    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
   </body>
 </html>
